<resources>
    <string name="app_name">WeatherDetector</string>



    <!-- Weather details -->
    <string name="weather_details_location_title">Egypt</string>
    <string name="weather_details_current_date">Today</string>
    <string name="weather_details_current_date_day">10 Jun</string>
    <string name="weather_details_current_description">clear sky</string>
    <string name="weather_details_wind_title">Wind</string>
    <string name="weather_details_wind_value">%s km/h</string>
    <string name="weather_details_humidity_title">Humidity</string>
    <string name="weather_details_humidity_value">%1$s%%</string>
    <string name="weather_details_pressure_title">Pressure</string>
    <string name="weather_details_pressure_value">%s hPa</string>
    <string name="weather_details_temp_title">Temp</string>
    <string name="weather_details_temp_value">%s °C</string>
    <string name="weather_details_feels_like_title">Feels \nLike</string>
    <string name="weather_details_feels_like_value">55</string>
    <string name="weather_details_request_new_permission">If you enable your location you can see your current location weather details
        , otherwise you can search for any country you want </string>
    <string name="weather_details_request_new_permission_title">New Permission</string>
    <string name="weather_details_request_new_permission_ok">Enable location</string>
    <string name="weather_details_request_new_permission_no">No</string>
    <string name="weather_details_no_current_location_found">As we can\'t reach your current location,
        you must search for any country to see the weather details.</string>


    <!-- Weather Daily -->
    <string name="weather_daily_next_week">Next week</string>
    <string name="weather_daily_day">Sunday</string>
    <string name="weather_daily_min_max">%s - %s °</string>


    <!--Errors -->
    <!-- Weather details -->
    <string name="error_weather_details_location_access_denied">Location access is required to get your current weather details,
        or you can search by your country name</string>
    <string name="error_weather_details_enable_gps">Please turn on your location,
        or you can search by your country name</string>
    <string name="error_weather_details_gps_problem">Sorry there\'s a problem with your location ..
        try to search about your country</string>

    <!-- base errors-->
    <string name="error_no_connection">Oops , there\'s no Network connection</string>
    <string name="error_message_title">Error!</string>
    <string name="success_message_title">Success</string>

</resources>